# python-ai-tutor

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
challenges/: 01_list_comprehension.py  02_dict_comprehension.py  03_decorators.py  04_generators.py  05_context_managers.py  06_generators_itertools.py  __init__.py
