[project]
name = "ai-tutor"
version = "0.1.0"
description = "Idiomatic Python learning challenges"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
# Tell pytest to look for test functions in any .py file in challenges/
python_files = ["challenges/*.py"]
python_functions = ["test_*"]
